@@ -1,4 +1,7 @@
 Release 1.10 - Current Development
+  * Drop the source file name from the embedded file path in
+    RecursiveParserWrapper's "X-TIKA:embedded_resource_path" 
+    (TIKA-1673).
 
   * Upgraded to Java 7 (TIKA-1536).
 
